--- a/tekoaly-oy/package.json
+++ b/tekoaly-oy/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://TekoalyO>.github.io/website",
+  "homepage": "https://TekoalyO.github.io/website",
   "name": "tekoaly-oy",
   "version": "0.1.0",
   "private": true,
